<resources>
    <string name="app_name">一米家校</string>
    <string name="login_input_id_and_bind">用户 ID或者手机邮箱不能为空！</string>
    <string name="registration_logging">连接中...</string>
    <string name="registration_failed">消息(连接解除)</string>
    <string name="registration_success"/>
    <string name="conn_time_out">连接超时，请检查网络连接</string>
    <string name="save">保存</string>
	<string name="tab_sms">消息</string>
	<string name="tab_contacts">小伙伴</string>
	<string name="tab_friends">好友圈</string>
	<string name="tab_events">活动</string>
	<string name="tab_settings">设置</string>
    <string name="tab_top">首页</string>
    <string name="tab_find">发现</string>
    <string name="tab_myclass">我的课堂</string>
    <string name="title_group_apply">入群请求</string>
    <string name="start_downloading_album_cover">下载动态封面</string>
    <string name="start_downloading_company_structure">下载组织架构</string>
    <string name="start_downloading_depts">下载部门信息</string>
    <string name="start_downloading_temp_groups">下载临时会话群组</string>
    <string name="start_downloading_favorite_items">下载收藏的群组／成员</string>
    <string name="start_downloading_latest_chat_targets">下载最近联系人列表</string>
    <string name="start_downloading_buddies">下载联系人</string>
	<string name="sms_pagetitle">会话</string>
	<string name="sms_chat_info">会话信息</string>
	<string name="sms_say_hello_to_you">请求加你为好友</string>
    <string name="contacts_tab_friends">好友</string>
    <string name="contacts_tab_books">通讯录</string>
    <string name="contacts_tab_school">校园里</string>
	<string name="contacts_local_moveto">移动至</string>
	<string name="contacts_local_delete">删除</string>
	<string name="contacts_local_mail">发邮件</string>
	<string name="contacts_local_sms">写短信</string>
	<string name="contacts_select_all">全选</string>
	<string name="contacts_select_groupchat">选择多人会话</string>
	<string name="contacts_groupchat_notexist">暂时没有多人会话，\n请返回选择联系人创建</string>
	<string name="contacts_select_sms">群发短信</string>
	<string name="contacts_select_mail">群发邮件</string>
	<string name="contact_info_group_pagetitle">群</string>
	<string name="contact_info_buddy_pageinfo">详细资料</string>
    <string name="contact_info_delete_friend">删除好友</string>
	<string name="contact_info_official_pagetitle">公众帐号</string>
	<string name="contact_info_add_as_friend">加为好友</string>
	<string name="contact_info_add_agree_request">同意</string>
	<string name="contact_info_add_ingore_request">忽略</string>
	<string name="contact_info_remarkname">备注名: %s</string>
	<string name="contact_info_wowid">用户 ID：%s</string>
	<string name="contact_info_group_short_id">群组号：%s</string>
    <string name="contact_info_call">免费语音呼叫</string>
    <string name="contact_info_video_call">免费视频通话</string>
    <string name="contactinfo_department">班级</string>
    <string name="contactinfo_job_title">职位</string>
    <string name="contactinfo_phone">电话</string>
    <string name="contactinfo_mobile">手机</string>
    <string name="contactinfo_email">邮箱</string>
    <string name="contactinfo_branch_store">办公地点</string>
    <string name="contactinfo_employee_id">工号</string>
    <string name="contactinfo_add_friend_denied">对方拒绝被添加为好友</string>
    <string name="contactgroupinfo_load_failure">数据加载失败</string>
	<string name="contacts_search_buddy">搜索</string>
	<string name="contacts_search_group">搜索群组</string>
	<string name="contacts_search_cancel">取消</string>
	<string name="contacts_search_result_buddy">用户</string>
	<string name="contacts_search_result_group">群组</string>
	<string name="contacts_search_buddy_hint">请输入用户 ID</string>
	<string name="contacts_search_group_hint">请输入群组号或名称</string>
	<string name="contacts_search_null">你可以搜索到好友</string>
	<string name="contacts_new_friends">新的朋友</string>
	<string name="contacts_new_friends_add_list">请求列表</string>
	<string name="contacts_new_friends_pending_in">发来好友请求</string>
	<string name="contacts_new_friends_pending_out">我已发出请求，等待对方回应</string>
	<string name="contacts_new_friends_unknown_state">未知状态</string>
	<string name="contacts_new_friends_agree">通过验证</string>
	<string name="contacts_new_friends_ignore">忽略</string>
	<string name="contacts_new_friends_view_buddy_info">查看用户资料</string>
    <string name="contacts_new_friends_allow_to_join_group">同意</string>
    <string name="contacts_new_friends_join_group">加入该群</string>
    <string name="contacts_new_friends_groupin">有人邀请你加入群组</string>
    <string name="contacts_new_friends_groupadmin">%1$s请求加入群组：%2$s</string>
    <string name="contacts_new_friends_groupout">请求加入群组：%s</string>
    <string name="contacts_new_friends_buddyin">%s请求加你为好友</string>
    <string name="contacts_new_friends_buddyout">请求加：%s为好友</string>
	<string name="contacts_new_friends_prompt_title">您有新的好友请求</string>
	<string name="contacts_new_friends_prompt_msg">请到 联系人－新的朋友 中查看</string>
	<string name="contacts_QRcode_dialogtitle">提示</string>
	<string name="contacts_QRcode_confirm">你确定要访问该网址吗？</string>
	<string name="contacts_QRcode_ok">确定</string>
	<string name="contacts_QRcode_cancel">取消</string>
    <string name="contacts_apply_to_join_group">申请加入群组</string>
    <string name="contact_groupcreate_input_group_name">输入群组名称</string>
    <string name="contacts_newfriend_wait_for_cofirm">等待验证</string>
    <string name="contacts_newfriend_extra_info">附加信息</string>
    <string name="contacts_group_no_introduce">暂无群组介绍</string>
    <string name="contacts_group_edit_info">编辑群组资料</string>
    <string name="contacts_group_classInfo">班</string>
    <string name="contacts_temp_group_delete_and_exit">删除并退出</string>
    <string name="newfriends_accept">同意</string>
    <string name="contacts_latest_contacts">最近联系人</string>
    <string name="contacts_recent">最近</string>
    <string name="contacts_discussion">讨论组</string>
    <string name="contacts_discussion_member_counts">(%s)</string>
    <string name="contacts_frequent">常用联系人</string>
    <string name="contactsforbiz_root_favorite_group_name">收藏的群组</string>
    <string name="contactsforbiz_root_group_name_display">所有成员</string>
    <string name="contacts_schoolmate_emptymsg_left">点击右上角</string>
    <string name="contacts_schoolmate_emptymsg_right">加入班级，找到更多小伙伴</string>
    <string name="contacts_friend_validate">朋友验证</string>
    <string name="contacts_validate_send">发送</string>
    <string name="contacts_validate_message">你需要发送验证申请，等对方通过</string>
    <string name="contacts_validate_detail">我是</string>
    <string name="contacts_validate_name">为好友设置备注名</string>
    <string name="contacts_validate_toast">发送成功</string>
	<string name="friends_moments_pagetitle">动态</string>
	<string name="friends_pagetitle">朋友们</string>
	<string name="firends_add_pagetitle">添加联系人</string>
	<string name="friends_moments">朋友动态</string>
	<string name="friends_add">添加朋友</string>
	<string name="friends_request_send">请求已发送</string>
    <string name="friends_official_search">公共帐号搜索</string>
    <string name="friends_recommended_official">推荐的公共帐号</string>
	<string name="friends_add_search">搜索</string>
	<string name="friends_add_import">导入</string>
	<string name="friends_add_create_group">创建群组</string>
	<string name="friends_add_official_account">官方帐号</string>
	<string name="friends_nearby">附近的人</string>
	<string name="friends_nearby_groups">附近的群</string>
	<string name="friends_interest">兴趣交友</string>
    <string name="friends_moment_detail">详情</string>
    <string name="friends_tell_friends">告诉朋友</string>
    <string name="friends_add_external_contact">添加外部联系人</string>
    <string name="friends_moment_comment_me">我</string>
    <string name="favoriteGroupsSort_failure">排序失败</string>
	<string name="events_all">乐趣活动</string>
	<string name="events_official">官方活动</string>
	<string name="events_my">我发起的活动</string>
	<string name="events_applied">已报名的活动</string>
	<string name="events_joined">已参加的活动</string>
	<string name="event_time_label">时间</string>
	<string name="event_time_label_start">开始时间</string>
	<string name="event_time_label_end">结束时间</string>
	<string name="event_place_label">地点</string>
	<string name="event_host_label">主办</string>
    <string name="event_tel_label">联系方式</string>
	<string name="event_cost_label">费用</string>
    <string name="event_cost_value">%s积分</string>
    <string name="event_cost_yuan">%s元</string>
    <string name="event_member_count_label">报名 </string>
	<string name="event_member_count_value">%s人</string>
    <string name="event_joined_count_suffix">人报名</string>
	<string name="event_category_label">类型</string>
	<string name="event_details">详情</string>
	<string name="event_submitinfo">提供报名者信息</string>
	<string name="event_play_video">播放语音介绍</string>
	<string name="event_pics">图片:</string>
    <string name="event_detail_introduce">详情:</string>
	<string name="event_title">标题</string>
	<string name="event_timebeforeafter">活动结束时间不能早于开始时间</string>
	<string name="event_desc">详情</string>
	<string name="event_capacity">人数限制</string>
	<string name="event_loc">地点</string>
	<string name="event_telephone">联系方式</string>
	<string name="event_isinfo">是否需要报名者提供信息</string>
	<string name="event_ispublic">是否公开</string>
	<string name="event_latlon">经纬度</string>
	<string name="event_startdate">开始</string>
    <string name="event_enddate">结束</string>
    <string name="event_allday">全天</string>
    <string name="event_repeat">重复</string>
    <string name="event_coins">报名费用</string>
    <string name="event_opne_level">开放级别</string>
	<string name="event_targetuser">目标人群</string>
	<string name="event_allowreview">允许评论</string>
    <string name="event_needtoupdatemultimedia">需要提交作品</string>
	<string name="event_addphoto">添加图片</string>
	<string name="event_addaudio">添加音频</string>
	<string name="event_invalid_title">请输入标题</string>
	<string name="event_invalid_desc">请输入简介</string>
	<string name="event_invalid_startdate">请输入时间</string>
	<string name="event_invalid_loc">请输入地点</string>
    <string name="event_info1">人数限制为0时表示无限制\n报名费用为0时表示不收取报名费</string>
    <string name="event_info2">活动介绍可以帮助其他用户更好地了解此活动，请不要过于简略。</string>
    <string name="event_time_start_earlier_now">活动开始时间早于当前时间！</string>
    <string name="event_time_end_earlier">活动结束时间早于开始时间！</string>
    <string name="event_member_count_nolimit">不限</string>
    <string name="event_join_coin_free">免费</string>
    <string name="event_finish_info">发布活动需要完成所有信息的填写！</string>
    <string name="event_info_fill">请填写完整信息！</string>
    <string name="event_cancel_join_msg">你确认取消报名吗？</string>
    <string name="event_quota_full">该活动名额已满!</string>
    <string name="manage_account_user_name">姓名</string>
	<string name="back">返回</string>
    <string name="register_success">注册成功，正在进入主界面...</string>
    <string name="add">添加</string>
    <string name="logo_name">一米家校</string>
    <string name="account_hint">帐号</string>
    <string name="passWord_hint">密码</string>
    <string name="login_otherwise">或者</string>
    <string name="login_others">使用其它方式登录</string>
	<string name="login_signup">注册</string>
    <string name="login_hint_invite_code">邀请码</string>
    <string name="login">登录</string>
    <string name="forgotPassWord">忘记密码？</string>
    <string name="next_step">下一步</string>
    <string name="withdraw_password_fail_text">非常抱歉。由于您输入的账户尚未绑定任何邮箱或手机号码，我们暂时无法为您提供密码找回服务。\n\n给您造成不便敬请谅解。</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="confirm">确认</string>
    <string name="bind_email_msg">点击下一步，我们将会向该地址发送验证码</string>
    <string name="input_your_emailaddress">请输入您的电子邮箱</string>
    <string name="input_your_password">请输入您的密码</string>
	<string name="moments_new_reviews_empty">没有未读评论</string>
	<string name="friends_moment_reviews">评论</string>
    <string name="clear">清空</string>
    <string name="moment_tag_all">全部</string>
    <string name="moment_tag_qa">问答</string>
    <string name="moment_tag_notice">通知</string>
	<string name="moment_tag_study">学习</string>
	<string name="moment_tag_life">生活</string>
	<string name="moment_tag_survey">投票</string>
    <string name="sys_notice_telephone">电话</string>
	<string name="title_add_class">添加课堂</string>
	<string name="invite_code">邀请码</string>
</resources>