<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_light">

	<RelativeLayout
		android:id="@+id/title_bar"
		style="?attr/navbar"
		android:layout_alignParentTop="true" >
		<ImageButton
			android:id="@+id/title_back"
			style="?attr/navbar_btn_left"
			android:src="@drawable/nav_back_selector"/>
		<TextView
			style="?attr/navbar_title"
			android:text="@string/friends_moment_reviews"/>

        <TextView
	        android:id="@+id/title_del"
	        style="?attr/navbar_txt_right"
	        android:text="@string/clear"/>
	</RelativeLayout>
	<ListView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:id="@android:id/list"
		android:cacheColorHint="@null"
		android:layout_below="@+id/title_bar"
		android:layout_gravity="left|center_vertical"
        android:divider="@drawable/divider"/>

	<TextView
		android:id="@android:id/empty"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/moments_new_reviews_empty"
	    android:layout_centerInParent="true"/>
</RelativeLayout>