<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/background_light"
                android:orientation="vertical" >

	<RelativeLayout
		android:id="@+id/bodyLayout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/title_bar"
		android:layout_marginTop="@dimen/login_logo_margin_top"
		android:gravity="center" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<ImageView
				android:id="@+id/logo"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:src="@drawable/login_logo_scale"
				android:scaleType="centerInside"/>

			<TextView
				android:id="@+id/logo_view"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:gravity="center"
				android:layout_marginBottom="@dimen/login_logo_margin_bottom"
				android:textSize="25sp"
				android:textColor="@color/green"
				android:text="@string/logo_name"/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/padding_large"
				android:background="@color/white"
				android:orientation="vertical" >

				<ImageView
					style="@style/standard_list_divider"/>

				<EditText
					android:id="@+id/txt_invite_code"
					style="@style/inputbox_borderless"
					android:imeOptions="actionDone"
					android:hint="@string/login_hint_invite_code"/>

				<ImageView
					style="@style/standard_list_divider"/>

			</LinearLayout>

			<Button
				android:id="@+id/btn_login"
				style="@style/button_green"
				android:text="@string/login"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/padding_large"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="20dp"
			android:orientation="vertical">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp" >
				<ImageView
					android:layout_centerInParent="true"
					style="@style/standard_list_divider"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:paddingLeft="@dimen/padding_medium"
					android:paddingRight="@dimen/padding_medium"
					android:background="@color/background_light"
					android:textColor="@color/text_gray3"
					android:text="@string/login_otherwise"/>
			</RelativeLayout>

			<Button
				android:id="@+id/btn_login_others"
				style="@style/button_blue"
				android:text="@string/login_others"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/padding_large"
				android:layout_marginRight="@dimen/padding_large"/>

			<Button
				android:id="@+id/btn_signup"
				style="@style/button_blue"
				android:text="@string/login_signup"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_large"
				android:layout_marginLeft="@dimen/padding_large"
				android:layout_marginRight="@dimen/padding_large"/>
		</LinearLayout>
	</RelativeLayout>

</RelativeLayout>
