<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/background_light"
                android:orientation="vertical" >
                
    <TextView 
          android:id="@+id/textView_logining"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="50dp"
          android:text="@string/register_success"
          android:textSize="24sp"
          android:visibility="gone" />

	<RelativeLayout
		android:id="@+id/bodyLayout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/title_bar"
		android:layout_marginTop="@dimen/login_logo_margin_top"
		android:gravity="center" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<ImageView
				android:id="@+id/logo"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:src="@drawable/login_logo"
				android:scaleType="centerInside"/>

			<TextView
				android:id="@+id/logo_view"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:gravity="center"
				android:layout_marginBottom="@dimen/login_logo_margin_bottom"
				android:textSize="25sp"
				android:textColor="@color/green"
				android:text="@string/logo_name"/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/padding_large"
				android:background="@color/white"
				android:orientation="vertical" >

				<ImageView
					style="@style/standard_list_divider"/>

				<EditText
					android:id="@+id/accountInput"
					style="@style/inputbox_borderless"
					android:imeOptions="actionNext"
					android:hint="@string/account_hint"
					android:textCursorDrawable="@color/green"/>

				<ImageView
					android:layout_marginLeft="@dimen/padding_medium"
					style="@style/standard_list_divider"/>

				<RelativeLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent">
					<EditText
						android:id="@+id/passWordInput"
						style="@style/inputbox_borderless"
						android:hint="@string/passWord_hint"
						android:imeOptions="actionDone"
						android:inputType="textPassword"
						android:textCursorDrawable="@color/green"/>
					<ImageButton
						android:id="@+id/field_clear"
						android:layout_height="20dp"
						android:layout_width="20dp"
						android:layout_marginRight="7dp"
						android:layout_centerVertical="true"
						android:layout_alignParentRight="true"
						android:visibility="gone"
						android:background="@drawable/field_clear"/>

				</RelativeLayout>

				<ImageView
					style="@style/standard_list_divider"/>

			</LinearLayout>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/forgotPassWord"
				android:id="@+id/forgotPassWord"
				android:layout_gravity="right"
				android:layout_marginRight="@dimen/padding_large"
				android:layout_marginBottom="@dimen/padding_large"
				android:textColor="@color/text_gray3"
				android:visibility="gone"/>

			<Button
				android:id="@+id/login_username"
				style="@style/button_green"
				android:text="@string/login"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/padding_large"
				android:layout_marginRight="@dimen/padding_large"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="20dp"
			android:orientation="vertical">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp" >
				<ImageView
					android:layout_centerInParent="true"
					style="@style/standard_list_divider"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:paddingLeft="@dimen/padding_medium"
					android:paddingRight="@dimen/padding_medium"
					android:background="@color/background_light"
					android:textColor="@color/text_gray3"
					android:text="@string/login_otherwise"/>
			</RelativeLayout>
			<Button
				android:id="@+id/btn_signup"
				style="@style/button_blue"
				android:text="@string/login_signup"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_large"
				android:layout_marginLeft="@dimen/padding_large"
				android:layout_marginRight="@dimen/padding_large"/>
			<!--  
			<Button
				android:id="@+id/login_qrcode"
				style="@style/button_blue"
				android:text="@string/login_qrcode"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/padding_large"
				android:layout_marginRight="@dimen/padding_large"/>-->
		</LinearLayout>
	</RelativeLayout>

</RelativeLayout>
