<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >
    <RelativeLayout 
        android:id="@+id/title_bar"
        android:layout_height="@dimen/title_bar_height"
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        style="?attr/navbar">
        <ImageButton 
            android:id="@+id/title_back"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:src="@drawable/nav_back_selector"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/bind_email"/>
    </RelativeLayout>
	<LinearLayout
	    android:layout_height="fill_parent"
	    android:layout_width="fill_parent"
	    android:layout_below="@+id/title_bar"
	    android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="10dp"
            android:background="@drawable/btn_white"
            android:orientation="vertical">
            <EditText 
	        	android:id="@+id/edt_email"
	       		android:layout_height="45dp"
	        	android:layout_width="fill_parent"
	        	android:background="@null"
	        	android:lines="1"
	        	android:hint="@string/input_your_emailaddress"
	        	android:inputType="textEmailAddress"
	        	android:paddingLeft="10dp"
	        	android:paddingRight="10dp"/>
            <ImageView
	            style="@style/standard_list_divider"/>
            <EditText
                android:id="@+id/edt_pwd"
                android:layout_height="45dp"
                android:layout_width="fill_parent"
                android:background="@null"
                android:lines="1"
                android:hint="@string/input_your_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>
	    
	    <TextView 
	        android:id="@+id/txt_msg"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="10dp"
	        android:textSize="16sp"
	        android:text="@string/bind_email_msg"/>
	    <Button
	        android:id="@+id/btn_next"
	        android:layout_height="50dp"
	        android:layout_width="fill_parent"
	        android:layout_margin="10dp"
	        style="@style/button_blue"
	        android:text="@string/next_step"/>
	</LinearLayout>
</RelativeLayout>