<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg_460" >
    <TextView 
        android:id="@+id/fail_text"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:text="@string/withdraw_password_fail_text"/>
    <TextView
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/fail_text"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:text="@string/logo_name"/>

    <!--<ImageView -->
        <!--android:layout_height="40dp"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_above="@+id/fail_text"-->
        <!--android:layout_marginBottom="80dp"-->
        <!--android:background="@drawable/yuanqu_text"/>-->
    
    <Button 
        android:id="@+id/btn_back"
        android:layout_height="45dp"
        android:layout_width="fill_parent"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_below="@+id/fail_text"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_large_gray_selector"
        android:shadowColor="@color/white_80"
        android:shadowDy="1"
        android:textColor="@color/login_gray_btn_font"
        android:textSize="17sp"
        android:text="@string/back"/>
</RelativeLayout>